Fixed overlapping popovers, filters on classic theme and other minor UI issues

--- a/public/assets/ss-bulma.css
+++ b/public/assets/ss-bulma.css
@@ -11877,7 +11877,7 @@ select {
 }
 
 .v3-icon {
-	width: 88% !important;
+	width: 74% !important;
 	aspect-ratio: 1;
 	background-size: contain !important;
 	background-position: center !important;
