--- a/src/themes/default.less
+++ b/src/themes/default.less
@@ -53,3 +53,7 @@
         background-color: #2a2a2a !important;
     }
 }
+
+.maps-aside-container .aside-box .darkened-background {
+    background-color: unset !important;
+}
